improvements for android compatibility